--- a/lib/text/news
+++ b/lib/text/news
@@ -1,3 +1,11 @@
 (lib/text/news)
 
-No news is good news
+GLORY MUD NEWS. ГЛОРИ МАД НЬЮЗ
+
+23 Aug 2018
+
+Prool drinks coffee
+
+31 Jul 2018
+
+Starts Glory MUD
