Bugfix: small bugfixes

--- a/lib/text/news
+++ b/lib/text/news
@@ -1,11 +1,7 @@
 (lib/text/news)
 
-GLORY MUD NEWS. ГЛОРИ МАД НЬЮЗ
+MUD NEWS
 
 23 Aug 2018
 
 Prool drinks coffee
-
-31 Jul 2018
-
-Starts Glory MUD
