--- a/lib/text/news
+++ b/lib/text/news
@@ -1,4 +1,13 @@
 (lib/text/news)
+
+7-Jan-2023 - this tbaMUD server in started in Prool's MUD Museum
+http://prool.kharkov.org
+https://github.com/prool/tbamud/tree/prool-2023
+
+UTF-8 Ukrainian text Цей сервер запущено у мад-музеї Пруля
+
+UTF-8 Russian text Этот сервер запущен в мад-музее Пруля
+-----------------------------------------------------------------
 			   THE tbaMUD HERALD
    		 "We addict players for their own enjoyment."
 
